package exceptions;

public class LimiteException extends Exception {
    public LimiteException(String message) {
        super(message);
    }
}
