package navire;

import tools.TypeNav;

public abstract class NavireSurface extends Navire {

    public NavireSurface(int id, TypeNav myType, int numEq) {
        super(id, myType, numEq);
    }
}