package tools;

public enum Statut {
    MILITAIRE,
    NEUTRE;
}
