@startuml

title __BATAILLE-NAVALE's Class Diagram__\n

    class Main {
    }
  

    namespace quipe {
      class equipe.EqBataillon {
      }
    }
  

    namespace quipe {
      class equipe.EqPecheur {
      }
    }
  

    namespace quipe {
      abstract class equipe.Equipe {
      }
    }
  

    namespace xceptions {
      class exceptions.JeuException {
      }
    }
  

    namespace xceptions {
      class exceptions.LimiteException {
      }
    }
  

    namespace xceptions {
      class exceptions.OccupException {
      }
    }
  

    namespace oueur {
      interface joueur.Humain {
      }
    }

    namespace oueur {
      interface joueur.Ia {
      }
    }

    namespace oueur {
      interface joueur.Joueur {
      }
    }
  

    namespace anager {
      class manager.Commande {
      }
    }
  

    namespace anager {
      class manager.Jeu {
      }
    }
  

    namespace avire {
      class navire.Chalutier {
      }
    }
  

    namespace avire {
      class navire.Destroyer {
      }
    }
  

    namespace avire {
      abstract class navire.Navire {
      }
    }
  

    namespace avire {
      abstract class navire.NavireProfondeur {
      }
    }
  

    namespace avire {
      abstract class navire.NavireSurface {
      }
    }

    namespace avire {
      class navire.SousMarin {
      }
    }

    namespace lateau {
      class plateau.CasePlateau {
      }
    }
  

    namespace lateau {
      class plateau.Plateau {
      }
    }
  

    namespace ools {
      enum Action {
      }
    }
  

    namespace ools {
      enum Couleur {
      }
    }
  

    namespace ools {
      enum Direction {
      }
    }

    namespace ools {
      enum Nature {
      }
    }
  

    namespace ools {
      enum Statut {
      }
    }
  

    namespace ools {
      class tools.ToolCouleur {
      }
    }
  

    namespace ools {
      enum TypeNav {
      }
    }
  

  equipe.EqBataillon -up-|> equipe.Equipe

  joueur.Ia -up-|> joueur.Joueur
  equipe.EqPecheur -up-|> equipe.Equipe
  equipe.Equipe .up.|> joueur.Humain
  equipe.Equipe .up.|> joueur.Ia
  equipe.Equipe o-- tools.Couleur : couleur
  equipe.Equipe o-- manager.Commande : myCommande
  equipe.Equipe o-- tools.Nature : myNature
  equipe.Equipe o-- tools.Statut : myStatut
  manager.Commande o-- tools.Action : actionChoisie
  manager.Commande o-- tools.Direction : directionChoisie
  manager.Commande o-- equipe.Equipe : equipe
  manager.Jeu o-- plateau.Plateau : plateau
  navire.Chalutier -up-|> navire.NavireSurface
  navire.Destroyer -up-|> navire.NavireSurface
  navire.Navire o-- tools.TypeNav : myType
  navire.NavireProfondeur -up-|> navire.Navire
  navire.NavireSurface -up-|> navire.Navire
  navire.SousMarin -up-|> navire.NavireProfondeur
  plateau.CasePlateau o-- navire.Navire : occupant
  plateau.CasePlateau o-- navire.NavireProfondeur : sousmarin


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
